--- a/src/Main.module.css
+++ b/src/Main.module.css
@@ -424,12 +424,23 @@
 }
 
 .newsletter_content .section .section_content .image{
+    position: relative;
     width: 100%;
     margin-right: 1vw;
 }
 
 .newsletter_content .section .section_content .image img{
     width: 10vw;
+}
+
+.newsletter_content .section .section_content .play{
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    padding: 1.4vw;
+    border-radius: 10vw;
+    background-color: white;
+
 }
 
 .newsletter_content .section .section_content .info h3{
